/*
 * lucene_field_infos.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2020-2023 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record.lucene;

option java_outer_classname = "LuceneFieldInfosProto";

enum IndexOptions {
  NO_INDEX_OPTIONS = 0;
  DOCS = 1;
  DOCS_AND_FREQS = 2;
  DOCS_AND_FREQS_AND_POSITIONS = 3;
  DOCS_AND_FREQS_AND_POSITIONS_AND_OFFSETS = 4;
}

enum DocValues {
  NO_DOC_VALUES = 0;
  NUMERIC = 1;
  BINARY = 2;
  SORTED = 3;
  SORTED_SET = 4;
  SORTED_NUMERIC = 5;
}

message Attribute {
  optional string key = 1;
  optional string value = 2;
}

message FieldInfo {
  optional string name = 1;
  optional int32 number = 2;
  optional bool store_term_vectors = 3;
  optional bool omits_norms = 4;
  optional bool store_payloads = 5;
  optional bool soft_deletes_field = 6;
  optional IndexOptions index_options = 7;
  optional DocValues doc_values = 8;
  optional int64 doc_values_gen = 9;
  repeated Attribute attributes = 10;
  optional int32 point_dimension_count = 11;
  optional int32 point_index_dimension_count = 12;
  optional int32 point_num_bytes = 13;
}

message FieldInfos {
  repeated FieldInfo field_info = 1;
}
